tests/fixtures/positive/libraries/LibraryCodeMustSpecifyReturnType.kt
package test

fun calculate() = 42

val greeting = "hello"
