tests/fixtures/negative/style/RedundantExplicitType.kt
package style

fun example() {
    val name = "hello"
    val count = 42
    val flag = true
}
